deploy/referencegrant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-infra-route-management-ui
  namespace: route-management-ui
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: infra-gateway
  to:
    - group: ""
      kind: Service
      name: route-management-ui
