deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: route-management-ui
  namespace: route-management-ui
spec:
  selector:
    app: route-management-ui
  ports:
    - name: http
      port: 8000
      targetPort: http
