deploy/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: route-management-ui
  namespace: infra-gateway
spec:
  parentRefs:
    - name: infra
      namespace: infra-gateway
  hostnames:
    - "tenant-a.dil.collab-cloud.eu"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /route
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: route-management-ui
          namespace: route-management-ui
          port: 8000
